# DnCNN

./: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml  train_mvp.py  visualize_random_samples.py  visualize_residual_dncnn.py
configs/: default.yaml  inverse_mapping.yaml
scripts/: git_auto.py
src/: __init__.py
src/core/: __init__.py  visualize.py
src/core/transmuters/: __init__.py  wavelet_core.py
src/data/: __init__.py  dataset.py  loader.py
src/models/denoisenet_1d/: README.md  README_CN.md  __init__.py  network.py
src/models/dncnn_cwt/: README.md  README_CN.md  __init__.py  cwt_layer.py  network.py
src/models/flux/: README.md  README_CN.md  __init__.py  losses.py  network.py
src/scripts/: train_denoisenet.py  train_flux.py
